# ot-harjoitustyo

./: .gitignore  README.md  pyproject.toml  tasks.py
data/: database.sqlite  info.txt  test-database.sqlite
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/kertauskamu-app/: pyproject.toml
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: __init__.py  maksukortti_test.py  maksukortti_tests.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: tehtävä1  tehtävä1.md  tehtävä2.md
src/: Untitled Diagram.drawio  index.py  initialize_database.py  kertauskamu_service.py
src/entities/: book.py  card.py  user.py
src/repositories/: book_repository.py  user_repositories.py  user_repository.py
src/services/: book_service.py  kertauskamu_service.py
src/tests/: book_repository_test.py
src/ui/: add_book.py  add_book_page.py  alustava_ui.py  browse_books_page.py  homepage.py  homepage_view.py  ui.py  uusin_ui.py  väliaikainen_koottu_ui.py  väliaikainen_ui.py  wishlist_page.py
